[gd_scene load_steps=5 format=2]

[ext_resource path="res://pickups/PowderPickup/gun_powder.png" type="Texture" id=1]
[ext_resource path="res://pickups/PowderPickup/PowderPickup.gd" type="Script" id=2]
[ext_resource path="res://utils/Plane2DMovementHelper.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 0.3, 0.5 )

[node name="Spatial" type="Area"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
pixel_size = 0.06
texture = ExtResource( 1 )

[node name="Plane2DMovementHelper" parent="." instance=ExtResource( 3 )]

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FlightTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
